v3 LESS: fix missing margin under some forms

--- a/cosinnus/static/less/v3_main_content_patches.less
+++ b/cosinnus/static/less/v3_main_content_patches.less
@@ -1,5 +1,5 @@
 .x-v3-content {
-    margin-bottom: 40px;
+    margin-bottom: 40px !important;
 }
 
 .v2-dashboard {
